python/ql/test/extractor-tests/syntax_error/illegal_indentation2.py
def foo(seq):
    for var in seq:
        body
  illegal-dedent
